# LightZero

./: .gitignore  install_sys_deps.sh  pyproject.toml  setup.py
lzero/entry/: train_rezero.py  train_unizero.py  train_unizero_segment.py
lzero/model/unizero_world_models/: world_model.py
zoo/atari/config/: atari_env_action_space_map.py  atari_rezero_ez_config.py  atari_unizero_segment_config.py
zoo/box2d/lunarlander/config/: lunarlander_cont_sampled_efficientzero_config.py
